tests/NormalTests/paczka1/fuzzy1/49815532.err
Error in line 2: A32 S937 75,9
Error in line 9: WhLeQpPfDc A659 88,4
Error in line 3: A32 A659 27,8
Error in line 19: WhLeQpPfDc A32 358,45
Error in line 17: zdK A827 98,7
Error in line 25: sFJp A827 10,1
Error in line 31: WhLeQpPfDc A32 32,3
Error in line 33: WhLeQpPfDc S937 28,5
